--- a/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,11 @@
-Hello {{ name }}!
+<html>
+<body>
+ {% for item in advertise %}
+               {{ item.title }}
+            {% endfor %}
+
+
+</body>
+
+
+</html>
