--- a/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
@@ -1,11 +1,94 @@
+<!doctype html>
 <html>
+<head>
+<meta charset="UTF-8" />
+<title></title>
+<!-- [if lt IE9] -->
+<script src="js/html5.js" type="text/javascript"></script>
+<!-- [endif] -->
+<link href="../../public/css/default.css" rel="stylesheet" type="text/css" />
+<link href="../../public/css/index.css" rel="stylesheet" type="text/css" />
+<script src="../../public/js/jquery-1.7.js" type="text/javascript"></script>
+<script src="../../public/js/banner.js" type="text/javascript"></script>
+</head>
 <body>
- {% for item in advertise %}
-               {{ item.title }}
+<header>
+  <section>
+    <div id="logo"><a href="#"><img src="images/logo.gif" width="109" height="37"></a></div>
+    <nav id="menu">
+      <ul>
+        <li><a href="#">首页</a></li>
+        <li><a href="#">体验广告</a></li>
+        <li><a href="#">兑换中心</a></li>
+        <li><a href="#">关于我们</a></li>
+        <li class="last"><a href="#">帮助中心</a></li>
+      </ul>
+    </nav>
+    <nav id="user">
+    	<a class="log" href="#">登录</a><a class="reg" href="#">注册</a>
+    </nav>
+  </section>
+</header>
+<div class="webArticle index">
+	<section class="one">
+        <div id="banner">
+        	<ul class="bannerImg">
+            	<li><img src="other/banner1.jpg" width="722" height="250"></li>
+                <li><img src="other/banner1.jpg" width="722" height="250"></li>
+                <li><img src="other/banner1.jpg" width="722" height="250"></li>
+                <li><img src="other/banner1.jpg" width="722" height="250"></li>
+            </ul>
+            <div class="bannerNumber"><a href="#" class="hover">1</a><a href="#">2</a><a href="#">3</a><a href="#">4</a></div>
+        </div>
+        <div id="userInformation"></div>
+    </section>
+    <section class="process"><img src="images/process.jpg" width="960" height="85"></section>
+  <section class="main">
+    	<article>
+        	<h2><img src="images/hotTask.jpg" width="209" height="19" alt="热门任务"><a class="more" href="#">更多>></a></h2>
+        	
+        	{% for item in advertise %}
+               <div class="task">
+               <a href="#">{{ item.content }}</a>
+                <h3>{{ item.title }}</h3>
+                <p>任务奖励：<span>500</span>积分</p>
+            </div>
             {% endfor %}
-
-
+        	
+    </article>
+    	<aside>
+        	<section>
+            	<h4>公告<a class="more" href="#">更多>></a></h4>
+              <ul class="news">
+                	<li><a href="#"><span>【活动】</span>“游戏冲冲冲”第4弹开始啦！</a></li>
+                    <li><a href="#"><span>【活动】</span>“游戏冲冲冲”第4弹开始啦！</a></li>
+                    <li><a href="#"><span>【活动】</span>“游戏冲冲冲”第4弹开始啦！</a></li>
+                    <li><a href="#"><span>【活动】</span>“游戏冲冲冲”第4弹开始啦！</a></li>
+                    <li><a href="#"><span>【活动】</span>“游戏冲冲冲”第4弹开始啦！</a></li>
+                    <li class="last"><a href="#"><span>【活动】</span>“游戏冲冲冲”第4弹开始啦！</a></li>
+                </ul>
+            </section>
+            <section>
+            	<h4>最新兑换<a class="more" href="#">更多>></a></h4>
+              <ul class="timeline">
+                	<li><a href="#">14896630</a>兑换移动花费<font>50</font>元直冲话</li>
+                    <li><a href="#">14896630</a>兑换移动花费<font>50</font>元直冲话</li>
+                    <li><a href="#">14896630</a>兑换移动花费<font>50</font>元直冲话</li>
+                    <li><a href="#">14896630</a>兑换移动花费<font>50</font>元直冲话</li>
+                    <li><a href="#">14896630</a>兑换移动花费<font>50</font>元直冲话</li>
+                    <li><a href="#">14896630</a>兑换移动花费<font>50</font>元直冲话</li>
+                    <li><a href="#">14896630</a>兑换移动花费<font>50</font>元直冲话</li>
+                    <li><a href="#">14896630</a>兑换移动花费<font>50</font>元直冲话</li>
+                    <li><a href="#">14896630</a>兑换移动花费<font>50</font>元直冲话</li>
+                    <li class="last"><a href="#">14896630</a>兑换移动花费<font>50</font>元直冲话</li>
+                </ul>
+            </section>
+        </aside>
+  </section>
+</div>
+<footer>
+	<section><a href="#">关于彩虹贝贝</a>|<a href="#">服务条款</a>|<a href="#">广告服务</a>|<a href="#">合作商家</a>|<span>彩虹贝贝版权所有 @2013</span>
+	</section>
+</footer>
 </body>
-
-
 </html>
