--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
@@ -1,1 +1,60 @@
-{{ advertiserment.title }}
+
+<!doctype html>
+<html>
+<head>
+<meta charset="UTF-8" />
+<title></title>
+<!-- [if lt IE9] -->
+<script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
+<!-- [endif] -->
+<link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
+<link href="{{ asset('css/aside.css')}}" rel="stylesheet" type="text/css" />
+<link href="{{ asset('css/adMore.css')}}" rel="stylesheet" type="text/css" />
+<script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
+<script src="{{ asset('js/banner.js')}}" type="text/javascript"></script>
+</head>
+<body>
+<header>
+  <section>
+    <div id="logo"><a href="#"><img src="images/logo.gif" width="109" height="37"></a></div>
+    <nav id="menu">
+      <ul>
+        <li><a href="#">首页</a></li>
+        <li><a href="#">体验广告</a></li>
+        <li><a href="#">兑换中心</a></li>
+        <li><a href="#">关于我们</a></li>
+        <li class="last"><a href="#">帮助中心</a></li>
+      </ul>
+    </nav>
+    <nav id="user"> <a class="log" href="#">登录</a><a class="reg" href="#">注册</a> </nav>
+  </section>
+</header>
+<div class="webArticle adMore">
+  <article>
+  	<div class="adTitle">
+    	<h1>我爱酷，全场满380送100元！</h1>
+        <p><span>截止日期：</span>2013年04月05日 ( 还有4天)</p>
+		<p><span>任务奖励：</span>10积分</p>
+        <a class="getBtn">领取任务</a>
+    </div>
+    <div class="rule">
+    	<h2>活动规则</h2>
+        <div class="article">
+        	<h3>温馨提示：</h3>
+            <p>【成果定义】成功购买，无退货。结算销售额为订单总金额扣除缺货商品金额、退货商品金额、运送费用、礼券费用的净值。<br />【数据返回形式】实时<br />备注：支付方式为支付宝付款时，需付款成功后订单才能返回</p>
+        </div>
+    </div>
+    <div class="explain">
+    	<h2>活动说明</h2>
+        <div class="article">
+       	  <div class="img"><img src="other/pic3.jpg"></div>
+        	<p>Wacoal以独有的人体科学研究所为强大的产品研发后盾，并从卓越的品质、严谨的科研、优秀的产品、贴心的服务四方面着眼，为中国女性提供兼具卓越机能性与时尚设计感于一体的内衣产品。  现华歌尔的产品线分为主打系列、金标系列、年轻系列，满足不同消费者的需求。</p>
+      </div>
+    </div>
+  </article>
+</div>
+<footer>
+  <section><a href="#">关于彩虹贝贝</a>|<a href="#">服务条款</a>|<a href="#">广告服务</a>|<a href="#">合作商家</a>|<span>彩虹贝贝版权所有 @2013</span> </section>
+</footer>
+</body>
+</html>
