--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
@@ -14,21 +14,7 @@
 <script src="{{ asset('js/banner.js')}}" type="text/javascript"></script>
 </head>
 <body>
-<header>
-  <section>
-    <div id="logo"><a href="#"><img src="{{ asset('images/logo.gif')}}" width="109" height="37"></a></div>
-    <nav id="menu">
-      <ul>
-        <li><a href="#">首页</a></li>
-        <li><a href="#">体验广告</a></li>
-        <li><a href="#">兑换中心</a></li>
-        <li><a href="#">关于我们</a></li>
-        <li class="last"><a href="#">帮助中心</a></li>
-      </ul>
-    </nav>
-    <nav id="user"> <a class="log" href="#">登录</a><a class="reg" href="#">注册</a> </nav>
-  </section>
-</header>
+{% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle adMore">
   <article>
   	<div class="adTitle">
@@ -53,8 +39,6 @@
     </div>
   </article>
 </div>
-<footer>
-  <section><a href="#">关于彩虹贝贝</a>|<a href="#">服务条款</a>|<a href="#">广告服务</a>|<a href="#">合作商家</a>|<span>彩虹贝贝版权所有 @2013</span> </section>
-</footer>
+{% include 'JiliApiBundle::footer.html.twig' %}
 </body>
 </html>
