--- a/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
@@ -12,31 +12,18 @@
 <script src="{{ asset('js/banner.js')}}" type="text/javascript"></script>
 </head>
 <body>
-<header>
-  <section>
-    <div id="logo"><a href="#"><img src="{{ asset('images/logo.gif')}}" width="109" height="37"></a></div>
-    <nav id="menu">
-      <ul>
-        <li><a href="#">首页</a></li>
-        <li><a href="{{ path('_advertiserment_list')}}">体验广告</a></li>
-        <li><a href="#">兑换中心</a></li>
-        <li><a href="#">关于我们</a></li>
-        <li class="last"><a href="#">帮助中心</a></li>
-      </ul>
-    </nav>
-    <nav id="user">
-    	<a class="log" href="#">登录</a><a class="reg" href="#">注册</a>
-    </nav>
-  </section>
-</header>
+{% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle index">
 	<section class="one">
         <div id="banner">
         	<ul class="bannerImg">
-            	<li><img src="other/banner1.jpg" width="722" height="250"></li>
+        	{% for item in advertise %}
+        	<li><a href="{{ path('_advertiserment_index',{'id':item.id}) }}">{{  item.imageurl | raw  }}</a></li>
+        	{% endfor %}
+            	<!--  <li><img src="other/banner1.jpg" width="722" height="250"></li>
                 <li><img src="other/banner1.jpg" width="722" height="250"></li>
                 <li><img src="other/banner1.jpg" width="722" height="250"></li>
-                <li><img src="other/banner1.jpg" width="722" height="250"></li>
+                <li><img src="other/banner1.jpg" width="722" height="250"></li>-->
             </ul>
             <div class="bannerNumber"><a href="#" class="hover">1</a><a href="#">2</a><a href="#">3</a><a href="#">4</a></div>
         </div>
@@ -49,7 +36,7 @@
         	
         	{% for item in advertise %}
                <div class="task">
-               {{  item.content | raw  }}
+               <a href="{{ path('_advertiserment_index',{'id':item.id}) }}">{{  item.imageurl | raw  }}</a>
                 <h3><a href="{{ path('_advertiserment_index',{'id':item.id}) }}">{{ item.title }}</a></h3>
                 <p>任务奖励：<span>500</span>积分</p>
             </div>
@@ -86,9 +73,6 @@
         </aside>
   </section>
 </div>
-<footer>
-	<section><a href="#">关于彩虹贝贝</a>|<a href="#">服务条款</a>|<a href="#">广告服务</a>|<a href="#">合作商家</a>|<span>彩虹贝贝版权所有 @2013</span>
-	</section>
-</footer>
+{% include 'JiliApiBundle::footer.html.twig' %}
 </body>
 </html>
