--- a/src/Jili/ApiBundle/Resources/views/User/reg.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/reg.html.twig
@@ -1,1 +1,4 @@
+<form action="{{ path('_user_reg') }}" method="post" {{ form_enctype(form) }}>
 {{ form_widget(form) }}
+ <input type="submit" />
+ </form>
