--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
@@ -21,7 +21,7 @@
     	<h1>我爱酷，全场满380送100元！</h1>
         <p><span>截止日期：</span>2013年04月05日 ( 还有4天)</p>
 		<p><span>任务奖励：</span>10积分</p>
-        <a class="getBtn">领取任务</a>
+        <a class="getBtn" href='{{ advertiserment.content }}' target="_blank">领取任务</a>
     </div>
     <div class="rule">
     	<h2>活动规则</h2>
