--- a/src/Jili/ApiBundle/Resources/views/header.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/header.html.twig
@@ -11,7 +11,7 @@
       </ul>
     </nav>
     <nav id="user">
-    	<a class="log" href="#">登录</a><a class="reg" href="#">注册</a>
+    	<a class="log" href="{{ path('_user_login') }}">登录</a><a class="reg" href="{{ path('_user_reg') }}">注册</a>
     </nav>
   </section>
 </header>
