--- a/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
@@ -8,7 +8,7 @@
 <!-- [endif] -->
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/index.css')}}" rel="stylesheet" type="text/css" />
-<script src="{{ asset('js/jquery-1.7.j')}}" type="text/javascript"></script>
+<script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/banner.js')}}" type="text/javascript"></script>
 </head>
 <body>
@@ -17,26 +17,23 @@
 	<section class="one">
         <div id="banner">
         	<ul class="bannerImg">
-        	{% for item in advertise %}
-        	<li><a href="{{ path('_advertiserment_index',{'id':item.id}) }}">{{  item.imageurl | raw  }}</a></li>
+        	{% for item in advertise_banner %}
+        	<li><a href="{{ path('_advertiserment_index',{'id':item.id}) }}"><img src='{{  item.imageurl | raw }}' width="722" height="250"/></a></li>
         	{% endfor %}
-            	<!--  <li><img src="other/banner1.jpg" width="722" height="250"></li>
-                <li><img src="other/banner1.jpg" width="722" height="250"></li>
-                <li><img src="other/banner1.jpg" width="722" height="250"></li>
-                <li><img src="other/banner1.jpg" width="722" height="250"></li>-->
+            	
             </ul>
             <div class="bannerNumber"><a href="#" class="hover">1</a><a href="#">2</a><a href="#">3</a><a href="#">4</a></div>
         </div>
         <div id="userInformation"></div>
     </section>
-    <section class="process"><img src="images/process.jpg" width="960" height="85"></section>
+    <section class="process"><img src="{{ asset('images/process.jpg')}}" width="960" height="85"></section>
   <section class="main">
     	<article>
-        	<h2><img src="images/hotTask.jpg" width="209" height="19" alt="热门任务"><a class="more" href="#">更多>></a></h2>
+        	<h2><img src="{{ asset('images/hotTask.jpg')}}" width="209" height="19" alt="热门任务"><a class="more" href="#">更多>></a></h2>
         	
         	{% for item in advertise %}
                <div class="task">
-               <a href="{{ path('_advertiserment_index',{'id':item.id}) }}">{{  item.imageurl | raw  }}</a>
+               <a href="{{ path('_advertiserment_index',{'id':item.id}) }}"><img src='{{  item.imageurl | raw }}' width="200" height="130"/></a>
                 <h3><a href="{{ path('_advertiserment_index',{'id':item.id}) }}">{{ item.title }}</a></h3>
                 <p>任务奖励：<span>500</span>积分</p>
             </div>
@@ -47,6 +44,7 @@
         	<section>
             	<h4>公告<a class="more" href="{{ path('_advertiserment_list')}}">更多>></a></h4>
               <ul class="news">
+              
                 	<li><a href="#"><span>【活动】</span>“游戏冲冲冲”第4弹开始啦！</a></li>
                     <li><a href="#"><span>【活动】</span>“游戏冲冲冲”第4弹开始啦！</a></li>
                     <li><a href="#"><span>【活动】</span>“游戏冲冲冲”第4弹开始啦！</a></li>
