--- a/src/Jili/ApiBundle/Resources/views/User/reg.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/reg.html.twig
@@ -1,4 +1,36 @@
-<form action="{{ path('_user_reg') }}" method="post" {{ form_enctype(form) }}>
-{{ form_widget(form) }}
- <input type="submit" />
- </form>
+<!doctype html>
+<html>
+<head>
+<meta charset="UTF-8" />
+<title></title>
+<!-- [if lt IE9] -->
+<script src="{{ asset('js/html5.js')}}'" type="text/javascript"></script>
+<!-- [endif] -->
+<link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
+<link href="{{ asset('css/aside.css')}}" rel="stylesheet" type="text/css" />
+<link href="{{ asset('css/regStep.css')}}" rel="stylesheet" type="text/css" />
+<script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
+<script src="{{ asset('js/banner.js')}}" type="text/javascript"></script>
+</head>
+<body>
+{% include 'JiliApiBundle::header.html.twig' %}
+<div class="webArticle regStep">
+  <article>
+  	<div class="step"><img src="{{ asset('images/step1.jpg')}}" width="960" height="36"></div>
+    <div class="regForm">
+    <ul>
+    	<li><dd>邮件地址：</dd><dt><input name="" type="text"><span>电子邮件就是您今后登录积粒网的账号</span></dt></li>
+        <li><dd>昵称：</dd><dt><input name="" type="text"><span>2-12个字符，不能含特殊符号</span></dt></li>
+        <li><dd></dd><dt><input name="" type="checkbox" value="">我已认真阅读并同意接受<a href="#" class="provision">《积粒网会员服务条款》</a></dt></li>
+        <li><dd></dd><dt><a class="regBtn" href="#">注册</a></dt></li>
+        <!-- <li><dd></dd><dt class="otherLogin">
+        	<h6>使用其他账号登录</h6>
+            <p><a class="qq" href="#">QQ账号</a><a class="weibo" href="#">新浪微博</a></p>
+        </dt></li> -->
+    </ul>
+    </div>
+  </article>
+</div>
+{% include 'JiliApiBundle::footer.html.twig' %}
+</body>
+</html>
