--- a/src/Jili/ApiBundle/Resources/views/User/login.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/login.html.twig
@@ -12,20 +12,23 @@
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/banner.js')}}" type="text/javascript"></script>
 </head>
+
 <body>
 {% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle login">
+<form action="{{ path('_user_login') }}" method="post" name="form1" id="form1">
   <article>
     <ul class="loginForm">
     	<h2>登录积粒网</h2>
-    	<li><dd>注册邮箱：</dd><dt><input name="" type="text"></dt></li>
-        <li><dd>密码：</dd><dt><input name="" type="text"></dt></li>
+    	<li><dd>注册邮箱：</dd><dt><input name="email" type="text"></dt></li>
+        <li><dd>密码：</dd><dt><input name="pwd" type="password"></dt></li>
         <li><dd>验证码：</dd><dt><input class="verification" name="" type="text"></dt></li>
         <li class="forget"><a href="#">忘记密码</a></li>
-        <li class="loginBtn"><input name="" type="button" value="登录"></li>
+        <li class="loginBtn"><input name="submit" type="submit" value="登录"></li>
         <li class="otherLogin">使用合作网站登录<a class="weibo" href="#"></a><a class="qq" href="#"></a></li>
     </ul>
   </article>
+  </form>
 </div>
 {% include 'JiliApiBundle::footer.html.twig' %}
 </body>
