--- a/src/Jili/ApiBundle/Resources/views/User/reg.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/reg.html.twig
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <title></title>
 <!-- [if lt IE9] -->
-<script src="{{ asset('js/html5.js')}}'" type="text/javascript"></script>
+<script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
 <!-- [endif] -->
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/aside.css')}}" rel="stylesheet" type="text/css" />
@@ -18,16 +18,23 @@
   <article>
   	<div class="step"><img src="{{ asset('images/step1.jpg')}}" width="960" height="36"></div>
     <div class="regForm">
+    <form action="{{ path('_user_reg') }}" method="post" name="form1" id="form1">
     <ul>
-    	<li><dd>邮件地址：</dd><dt><input name="" type="text"><span>电子邮件就是您今后登录积粒网的账号</span></dt></li>
-        <li><dd>昵称：</dd><dt><input name="" type="text"><span>2-12个字符，不能含特殊符号</span></dt></li>
-        <li><dd></dd><dt><input name="" type="checkbox" value="">我已认真阅读并同意接受<a href="#" class="provision">《积粒网会员服务条款》</a></dt></li>
-        <li><dd></dd><dt><a class="regBtn" href="#">注册</a></dt></li>
+    	<li><dd>邮件地址：</dd><dt><input name="email" type="text"><span>电子邮件就是您今后登录积粒网的账号</span></dt></li>
+        <li><dd>昵称：</dd><dt><input name="nick" type="text"><span>2-12个字符，不能含特殊符号</span></dt></li>
+        <li><dd></dd><dt><input name="ck" type="checkbox" value="1">我已认真阅读并同意接受<a href="#" class="provision">《积粒网会员服务条款》</a></dt></li>
+        <li><dd></dd><dt>
+         <!-- <a class="regBtn" href="#">注册</a> -->
+        
+        <input type='submit' name='submit' class='regBtn' value='注册'/>
+        
+        </dt></li>
         <!-- <li><dd></dd><dt class="otherLogin">
         	<h6>使用其他账号登录</h6>
             <p><a class="qq" href="#">QQ账号</a><a class="weibo" href="#">新浪微博</a></p>
         </dt></li> -->
     </ul>
+    </form>
     </div>
   </article>
 </div>
