--- a/src/Jili/ApiBundle/Resources/views/User/reg.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/reg.html.twig
@@ -22,6 +22,10 @@
     <ul>
     	<li><dd>邮件地址：</dd><dt><input name="email" type="text"><span>电子邮件就是您今后登录积粒网的账号</span></dt></li>
         <li><dd>昵称：</dd><dt><input name="nick" type="text"><span>2-12个字符，不能含特殊符号</span></dt></li>
+         <!--  <li><dd>验证码：</dd><dt><input name="" type="text" class="verification"></dt>
+          <img src="" title="captcha" />-->
+         
+         </li>
         <li><dd></dd><dt><input name="ck" type="checkbox" value="1">我已认真阅读并同意接受<a href="#" class="provision">《积粒网会员服务条款》</a></dt></li>
         <li><dd></dd><dt>
          <!-- <a class="regBtn" href="#">注册</a> -->
