--- a/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
@@ -6,10 +6,12 @@
 <!-- [if lt IE9] -->
 <script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
 <!-- [endif] -->
+<link href="{{ asset('css/pageNav.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/personal.css')}}" rel="stylesheet" type="text/css" />
 <script src="{{ asset('js/jquery-1.7.j')}}" type="text/javascript"></script>
 <script src="{{ asset('js/personal.js')}}" type="text/javascript"></script>
+
 </head>
 <body>
 {% include 'JiliApiBundle::header.html.twig' %}
@@ -27,19 +29,22 @@
           <th>体验进度</th>
           <th>领取奖励</th>
         </tr>
-         {% for item in adtaste %}
+         {% for item in pagination %}
         <tr>
           <td>{{ item.title }} </td>
           <td>60</td>
           <td>长期</td>
-          <td>{{ item.time.date  }}</td>
+          <td>{{ item.adtime.date  }}</td>
           <td></td>
           <td>领取奖励</td>
         </tr>
          {% endfor %}
 </table>
+  {# display navigation #}
+{{ pagination.render()|raw }}
 </div>
   </section>
+  
 {% include 'JiliApiBundle::footer.html.twig' %}
 </body>
 </html>
