--- a/src/Jili/ApiBundle/Resources/views/User/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/info.html.twig
@@ -8,9 +8,30 @@
 <!-- [endif] -->
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/personal.css')}}" rel="stylesheet" type="text/css" />
-<script src="{{ asset('js/jquery-1.7.j')}}" type="text/javascript"></script>
+<script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/personal.js')}}" type="text/javascript"></script>
 </head>
+<script type="text/javascript">
+$(document).ready(function(){
+	
+		$.ajax({
+			url : '{{ path('_user_checkFlag',{'id':user.id}) }}',
+			type : 'get',
+			success : function(msg) {
+				if(msg=='1'){
+					$("#update").hide();
+				}else{
+					$("#info").hide();
+				}
+			}
+		});
+
+	$("#change").click(function (){
+		$("#info").hide();
+		$("#update").show();
+	})
+});
+</script>
 <body>
 {% include 'JiliApiBundle::header.html.twig' %}
 <div class="personal">
@@ -28,12 +49,10 @@
         <div class="clear"></div>
     </div>
   </section>
-
-  {% if user.flag == '1' %}
-   <section>
+   <section id= "info">
     <h3>个人信息<a class="close">关闭</a><a class="open" style="display:none;">打开</a></h3>
     <div class="content info">
-      <a class="edit" href="#">修改 »</a>
+      <a class="edit" href="javascript:void(0);" id="change">修改 »</a>
       <ul>
         <li>
           <dd>登录账号：</dd>
@@ -67,18 +86,16 @@
       </ul>
     </div>
   </section>
-  
-  {% else %}
+
+  <section id= "update">
   {% include 'JiliApiBundle:User:update.html.twig' %}
- 
-  
-  {% endif %}
- 
+  </section>
+
   <section>
     <h3>我的广告体验<a class="close">关闭</a><a class="open" style="display:none;">打开</a></h3>
     <div class="content ad">
       <div class="selectTable">
-      	<a href="#" class="hover">我正在体验的广告</a><a href="#">未体验（6）</a><a href="#">一共（{{ adtaste.0.num }}条信息）</a>
+      	<a href="#" class="hover">我正在体验的广告</a><a href="#">未体验（6）</a>
       </div>
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
@@ -94,7 +111,7 @@
           <td>{{ item.title }} </td>
           <td>60</td>
           <td>长期</td>
-          <td>{{ item.time.date  }}</td>
+          <td>{{ item.adtime.date  }}</td>
           <td></td>
           <td>领取奖励</td>
         </tr>
