--- a/src/Jili/ApiBundle/Resources/views/header.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/header.html.twig
@@ -5,8 +5,8 @@
       <ul>
         <li><a href="{{ path('_default_index') }}">首页</a></li>
         <li><a href="{{ path('_advertiserment_list')}}">体验广告</a></li>
-        <li><a href="#">兑换中心</a></li>
-        <li><a href="#">关于我们</a></li>
+        <li><a href="{{ path('_exchange_index')}}">兑换中心</a></li>
+        <li><a href="{{ path('_default_about')}}">关于我们</a></li>
         <li class="last"><a href="#">帮助中心</a></li>
       </ul>
     </nav>
