--- a/src/Jili/ApiBundle/Resources/views/User/login.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/login.html.twig
@@ -21,7 +21,7 @@
     <ul class="loginForm">
     	<h2>登录积粒网</h2>
     	<li><dd>注册邮箱：</dd><dt><input name="email" type="text"></dt></li>
-        <li><dd>密码：</dd><dt><input name="pwd" type="password"></dt></li>
+        <li><dd>密码：</dd><dt><input name="pwd" type="text"></dt></li>
         <li><dd>验证码：</dd><dt><input class="verification" name="" type="text"></dt></li>
         <li class="forget"><a href="#">忘记密码</a></li>
         <li class="loginBtn"><input name="submit" type="submit" value="登录"></li>
