--- a/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
@@ -41,7 +41,7 @@
          {% endfor %}
 </table>
   {# display navigation #}
-{{ pagination.render()|raw }}
+{{ knp_pagination_render(pagination) }}
 </div>
   </section>
   
