--- a/src/Jili/ApiBundle/Resources/views/User/checkReg.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/checkReg.html.twig
@@ -16,11 +16,11 @@
 {% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle regStep">
   <article>
-  	<div class="step"><img src="{{ asset('images/step2.jpg')}}" width="960" height="36"></div>
+  	<div class="step"><img src="{{ asset('images/step2.jpg')}}" width="960" height="86"></div>
     <div class="regFrame">
     	<div class="goToMail">
    	    <div class="img"><img src="{{ asset('images/emailImage.jpg')}}" width="123" height="115"></div>
-        <p>我们已经发送了激活右键给您<br />请查看您的邮箱，确认是否收到来自积粒网的激活邮件，并点击邮件中的验证链接。<br /><a href="http://{{ gotoEmial }}"><img src="{{ asset('images/goMailBtn.jpg')}}" width="115" height="35"></a></p>
+        <p>我们已经发送了激活右键给您<br />请查看您的邮箱，确认是否收到来自积粒网的激活邮件，并点击邮件中的验证链接。<br /><a href="http://{{ gotoEmial }}"><img src="{{ asset('images/goMailBtn.jpg')}}" width="128" height="35"></a></p>
         <p><a class="again" href="#">没收到？再次发送！</a></p>
         </div>
         <div class="notMail">
@@ -31,8 +31,6 @@
     </div>
   </article>
 </div>
-<footer>
-  <section><a href="#">关于彩虹贝贝</a>|<a href="#">服务条款</a>|<a href="#">广告服务</a>|<a href="#">合作商家</a>|<span>彩虹贝贝版权所有 @2013</span> </section>
-</footer>
+{% include 'JiliApiBundle::footer.html.twig' %}
 </body>
 </html>
