--- a/src/Jili/ApiBundle/Resources/views/User/reg.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/reg.html.twig
@@ -16,32 +16,26 @@
 {% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle regStep">
   <article>
-  	<div class="step"><img src="{{ asset('images/step1.jpg')}}" width="960" height="36"></div>
-    <div class="regForm">
-    <form action="{{ path('_user_reg') }}" method="post" name="form1" id="form1">
-    <ul>
-    	<li><dd>邮件地址：</dd><dt><input name="email" type="text"><span>电子邮件就是您今后登录积粒网的账号</span></dt></li>
-        <li><dd>昵称：</dd><dt><input name="nick" type="text"><span>2-12个字符，不能含特殊符号</span></dt></li>
-         <!--  <li><dd>验证码：</dd><dt><input name="" type="text" class="verification"></dt>
-          <img src="" title="captcha" />-->
-         
+  	<div class="step"><img src="{{ asset('images/step1.jpg')}}" width="960" height="86"></div>
+    <div class="regForm" style="padding-top:100px;">
+    <h2>快速注册<span>通过邮箱注册，快速加入积粒网，轻轻松松拿积分、换现金！</span></h2>
+      <form action="{{ path('_user_reg') }}" method="post" name="form1" id="form1">
+    <ul class="form">
+    	<li><dd>邮件地址：</dd><dt><input name="email" type="text"><br /><span>电子邮件就是您今后登录积粒网的账号</span></dt></li>
+        <li><dd>昵称：</dd><dt><input name="nick" type="text"><br /><span>2-12个字符，不能含特殊符号</span></dt></li>
+        <li><dd>验证码：</dd><dt><input name="captcha" type="text" class="verification"></dt>
+        <img name="captcha" onclick="this.src='{{  path('_user_captcha',{'r': random(999999) } )}}'" src="{{ path('_user_captcha') }}" />
          </li>
-        <li><dd></dd><dt><input name="ck" type="checkbox" value="1">我已认真阅读并同意接受<a href="#" class="provision">《积粒网会员服务条款》</a></dt></li>
-        <li><dd></dd><dt>
-         <!-- <a class="regBtn" href="#">注册</a> -->
-        
-        <input type='submit' name='submit' class='regBtn' value='注册'/>
-        
+        <li><dd></dd><dt><!--  <a class="regBtn" href="#">发送验证邮件</a>-->
+        <input type='submit' name='submit' class='regBtn' value='发送验证邮件'/>
         </dt></li>
-        <!-- <li><dd></dd><dt class="otherLogin">
-        	<h6>使用其他账号登录</h6>
-            <p><a class="qq" href="#">QQ账号</a><a class="weibo" href="#">新浪微博</a></p>
-        </dt></li> -->
-    </ul>
-    </form>
+    </ul></form>
+    <div class="loginArea">我已经注册，现在就<a class="login" href="{{ path('_user_reg') }}">注册</a></div>
+    <div class="clear"></div>
     </div>
   </article>
 </div>
 {% include 'JiliApiBundle::footer.html.twig' %}
 </body>
 </html>
+
