login show error  remember me  action resetPwd

--- a/src/Jili/ApiBundle/Resources/views/Exchange/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/index.html.twig
@@ -19,7 +19,11 @@ $(document).ready(function(){
 <body>
 {% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle exchange">
-	<div class="about"><img src="{{ asset('images/exchange.jpg')}}" width="875" height="640"></div>
+<div class="about"><img src="{{ asset('images/exchange.jpg')}}" width="875" height="640" usemap="#Map">
+      <map name="Map">
+        <area shape="rect" coords="661,618,759,637" href="https://www.91wenwen.net/signup/profile" target="_blank">
+      </map>
+ </div>
     <div class="btnArea"><img src="{{ asset('images/exchangeBtn_inactive.jpg')}}" width="208" height="93"></div>
 </div>
 {% include 'JiliApiBundle::footer.html.twig' %}
