--- a/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
@@ -37,12 +37,11 @@ $(function(){
     	<div class="after">
         	<div class="user">
         	    {% if user.iconPath %}
-            	    <div class="photo"><img src="{{ asset(user.iconPath) }}" width="90" height="90"></div>
+            	    <div class="photo"><a href="{{ path('_user_info')}}" target="blank"><img src="{{ asset(user.iconPath) }}" width="90" height="90"></a></div>
             	{% else %}
-            	   <div class="photo"> <img src="{{ asset('images/default_face.jpg') }}" width="90" height="90"/></div>
+            	   <div class="photo"> <a href="{{ path('_user_info')}}" target="blank"><img src="{{ asset('images/default_face.jpg') }}" width="90" height="90"/></a></div>
             	 {% endif %}
-                <p>您好，{{ user.nick }}</p>
-                <p><a href="{{ path('_user_info')}}" target="blank">个人中心</a></p>
+                <p>您好，<a href="{{ path('_user_info')}}" target="blank">{{ user.nick }}</a></p>
                 <div class="clear"></div>
                 <p class="point">当前米粒数：<span>{{ user.points }}</span></p>
             </div>
@@ -56,7 +55,8 @@ $(function(){
         <div class="before">
             <p><input name="email" type="text"></p>
             <p><input name="pwd" type="password"></p>
-            <p><input name="" id='login' type="image" src="{{ asset('images/indexLoginBtn.jpg') }}"><label><input name="" type="checkbox" value="">记住我</label> | <a class="forget" href="#">忘记密码?</a></span></p> 
+            <p><input name="" id='login' type="image" src="{{ asset('images/indexLoginBtn.jpg') }}"><label>
+            <input name="remember_me" type="checkbox" value="1">记住我</label> | <a class="forget" href="{{ path('_user_resetPwd') }}">忘记密码?</a></span></p> 
             <p><a class="reg" href="{{ path('_user_reg') }}">免费注册</a></p>
         </div>
         </form>
