--- a/src/Jili/ApiBundle/Resources/views/User/login.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/login.html.twig
@@ -12,49 +12,54 @@
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/banner.js')}}" type="text/javascript"></script>
 <script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-var head = document.getElementsByTagName("head")[0] || document.documentElement;
-var script = document.createElement("script");
-script.src = gaJsHost + "google-analytics.com/ga.js";
-
-var done = false; // 防止onload，onreadystatechange同时执行
-// 加载完毕后执行，适应所有浏览器
-script.onload = script.onreadystatechange = function() {
-if (!done && (!this.readyState || this.readyState === "loaded" || this.readyState === "complete")){
-done = true;
-try {
-var pageTracker = _gat._getTracker("UA-123456-16");
-pageTracker._trackPageview();
-} catch(err) {}
-script.onload = script.onreadystatechange = null;
-}
-};
-head.insertBefore(script,head.firstChild); 
-
-function keyLogin(){  
+function keyLogin(event){  
     if (event.keyCode==13)   //回车键的键值为13  
-         document.form1.submit(); //调用登录按钮的登录事件  
-    }  
+         //document.form1.submit(); //调用登录按钮的登录事件  
+        check();
+}  
+function check(){
+     $("#form1").submit();
+}
+function clear(){
+	$(".error").html('&nbsp;');
+}
+
+    
 </script>
 </head>
-<body onkeydown="keyLogin();">
+<body onkeydown="keyLogin(event);">
 {% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle login">
-<form action="{{ path('_user_login') }}" method="post" name="form1" id="form1">
+  <div class="img"><img src="{{ asset('images/loginImage.jpg') }}" width="436" height="423"></div>
+  <form action="{{ path('_user_login') }}" method="post" name="form1" id="form1">
   <article>
     <ul class="loginForm">
-    	<h2>登录积粒网</h2>
-    	<li><dd>注册邮箱：</dd><dt><input name="email" type="text"></dt></li>
-        <li><dd>密码：</dd><dt><input name="pwd" type="password"></dt></li>
-        <li><dd>验证码：</dd><dt><input class="verification" name="captcha" type="text"></dt>
-          <img name="captcha" onclick="this.src='{{  path('_user_captcha',{'r': random(999999) } )}}'" src="{{ path('_user_captcha') }}" /></li>
-        <li class="forget"><a href="#">忘记密码</a></li>
-        <li class="loginBtn"><input name="submit" type="submit" value="登录"></li>
-        <li class="otherLogin">使用合作网站登录<a class="weibo" href="#"></a><a class="qq" href="#"></a></li>
+      <h2>欢迎登录积粒账户</h2>
+      {% if code==1 %}
+           <li class="error">用户名或密码错误</li>
+       {% elseif code==2 %}
+           <li class="error">用户格式不对</li>
+       {% elseif code==3 %}
+            <li class="error">请输入账号</li>
+       {% else %}
+           <li class="error">&nbsp;</li>
+       {% endif %}
+      <li>
+          <input name="email" id="email" type="text" onFocus="$('.error').html('&nbsp;');" >
+      </li>
+      <li>
+          <input name="pwd" id="pwd" type="password"  onFocus="clear();">
+      </li>
+      <li>
+      <input id="remember_me" name="remember_me" type="checkbox" value="1">记住我
+      </li>
+      <li class="loginBtn"><input name="" type="button" value="登录" onclick="check();"><a class="forget" href="{{ path('_user_resetPwd') }}" target="_blank">忘记密码</a></li>
+      <!--  <li class="otherLogin">使用合作网站登录<a class="weibo" href="#"></a><a class="qq" href="#"></a></li>-->
     </ul>
-  </article>
-  </form>
+    <div class="regArea"><a href="{{ path('_user_reg') }}" target="_blank" class="reg">立即注册</a></div>
+  </article></form>
 </div>
 {% include 'JiliApiBundle::footer.html.twig' %}
 </body>
 </html>
+
