--- a/web/css/index.css
+++ b/web/css/index.css
@@ -56,7 +56,7 @@
 	width:214px;
 	height:51px;
 	text-indent:-9999px;
-	display:inline-block;
+	display:block;
 }
 .index section.one #userInformation .before a.reg:hover{
 	opacity:.8;
@@ -69,6 +69,7 @@
 	display:inline-block;
 	padding:0 5px 0 35px;
 	color:#c5c5c5;
+	line-height:35px;
 }
 .index section.one #userInformation .before input[type="text"]:focus, .index section.one #userInformation .before input[type="password"]:focus{
 	color:#666;
