--- a/web/css/personal.css
+++ b/web/css/personal.css
@@ -48,13 +48,17 @@
 	float:left;
 	margin: 0 20px;
 }
+.photo .img img{
+	width:80px;
+	height:80px;
+}
 .photo p{
 	margin:20px 0;
 }
 .photo p span{
 	color:#ee472c;
 }
-.upload{
+.photo a.upload{
 	height:32px;
 	background-image:url(../images/uploadBg);
 	font-size:16px;
@@ -106,7 +110,7 @@
 	padding: 5px;
 	width: 360px;
 }
-.info ul li dt input[type="submit"] {
+.info ul li dt input[type="button"] {
 	height: 29px;
 	background-image: url(../images/formButtonBg);
 	border: 1px solid #cf410c;
